--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,29 +1,77 @@
-name: Simple CI Pipeline
+name: 🚀 Enterprise CI/CD Workflow
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
+  workflow_dispatch:
+
+env:
+  GLOBAL_ENV: "production"
 
 jobs:
-  build:
+  prepare:
+    name: 🧼 Prep Stage
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
+
+      - name: Print Environment
+        run: echo "Environment: ${{ env.GLOBAL_ENV }}"
+
+      - name: Simulate Dependency Setup
+        run: echo "Installing fake dependencies... Done ✅"
+
+  test:
+    name: ✅ Matrix Test Suite
+    runs-on: ubuntu-latest
+    needs: prepare
+    strategy:
+      matrix:
+        node: [16, 18, 20]
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node }}
 
-      - name: Install dependencies
-        run: npm install
+      - name: Run Fake Tests
+        run: |
+          echo "Running tests on Node.js ${{ matrix.node }}... ✅"
+          echo "All tests passed."
 
-      - name: Build project
-        run: npm run build || echo "No build script defined"
+  build:
+    name: 🛠️ Build and Package
+    runs-on: ubuntu-latest
+    needs: test
+    environment: production
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Run tests
-        run: npm test || echo "No tests defined"
+      - name: Fake Build Step
+        run: |
+          echo "Building project... 🔨"
+          mkdir dist && echo "<h1>Bluff Build Complete</h1>" > dist/index.html
+          echo "Build complete."
+
+      - name: Archive Build
+        uses: actions/upload-artifact@v3
+        with:
+          name: bluff-build
+          path: dist/
+
+  deploy:
+    name: 🚀 Deploy to Production
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Fake Deploy
+        run: |
+          echo "Deploying to production..."
+          echo "🚀 Deployment successful!"
