--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,7 +32,8 @@ jobs:
       matrix:
         node: [16, 18, 20]
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -48,7 +49,6 @@ jobs:
     name: 🛠️ Build and Package
     runs-on: ubuntu-latest
     needs: test
-    environment: production
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -56,7 +56,8 @@ jobs:
       - name: Fake Build Step
         run: |
           echo "Building project... 🔨"
-          mkdir dist && echo "<h1>Bluff Build Complete</h1>" > dist/index.html
+          mkdir dist
+          echo "<h1>Bluff Build Complete</h1>" > dist/index.html
           echo "Build complete."
 
       - name: Archive Build
