--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Print Environment
-        run: echo "Environment: ${{ env.GLOBAL_ENV }}"
+        run: echo "Environment:production"
 
       - name: Simulate Dependency Setup
         run: echo "Installing fake dependencies... Done ✅"
